--- a/.gitignore
+++ b/.gitignore
@@ -117,3 +117,8 @@ dist
 
 executables/
 oorekaParser/out.txt
+package-lock.json
+wikipediaParser/out.txt
+
+wikipediaParser/wikipediaVegetableParser_copy.js
+package-lock.json
